# FloPoCo

./: CMakeLists.txt  PagSuiteConfig.cmake  README.md  TODO.org  VERSION
autotools/src/: Makefile.am
data/FFTAlgorithms/: phi128_BT__WLe16b20.txt  phi128_SR__WLe16b20.txt  phi16_BT_WLe16b20.txt  phi16_SR__WLe16b20.txt  phi256_BT_WLe16b20.txt  phi256_SR__WLe16b20.txt  phi32_BT_WLe16b20.txt  phi32_SR_WLe16b20.txt  phi64_BT__WLe16b20.txt  phi64_SR__WLe16b20.txt  phi8_BT__WLe16b20.txt  phi8_SR__WLe16b20.txt
data/FFTRotators/: rotators_BT_bestWLe16b20.txt  rotators_SR_bestWLe16b20.txt
doc/Figures/: fp2fix_alignment.vsd  perceptron.gv
doc/flopoco_developer_manual/: dot_diag_macros.tex  flopoco_developer_manual.tex
doc/web/: ReleaseNotes.txt  flopoco_installation.html  index.html
src/: DualTable.hpp  FP2Fix.cpp  FP2FixV2.cpp  FP2FixV2.hpp  FPAdderDualPath.cpp  FPAdderSinglePath.cpp  FPExp.cpp  FPNormalCDF.cpp  FPNormalCDF.hpp  Factories.cpp  FixConstant.cpp  FixConstant.hpp  FloPoCo.hpp  FlopocoStream.hpp  FullyParallelFFT.cpp  FullyParallelFFT.hpp  IntAdder.hpp  LexerContext.hpp  Logging.cpp  Logging.hpp  ModuloBitHeapOperator.cpp  ModuloBitHeapOperator.hpp  ModuloMontgomery.cpp  ModuloMontgomery.hpp  Operator.cpp  Operator.hpp  ShiftReg.cpp  ShiftReg.hpp  Signal.cpp  Signal.hpp  SourceFileList.txt  Table.cpp  Table.hpp  Target.cpp  Target.hpp  TestBench.cpp  TestBench.hpp  TestCase.cpp  TestCase.hpp  TestState.cpp  (+10 more)
src/Apps/: Perceptron.cpp  Perceptron.hpp
src/AutoTest/: cleanOpTest.sh  initOpTest.sh  testScript.sh
src/BitHeap/: Bit.cpp  BitHeap.cpp  BitHeap.hpp  BitHeapHeuristicCompression.cpp  BitHeapHeuristicCompression.hpp  BitHeapILPCompression.cpp  BitHeapILPCompression.hpp  BitHeapModuloTest.cpp  BitHeapModuloTest.hpp  BitHeapSolution.cpp  CompressionStrategy.cpp  CompressionStrategy.hpp  Compressor.cpp  Compressor.hpp  ConstantAddCompressor.cpp  ConstantAddCompressor.hpp  ConstantToBitheap.cpp  ConstantToBitheap.hpp  MaxEfficiencyCompressionStrategy.cpp  MaxEfficiencyCompressionStrategy.hpp  ModuloBarrett.cpp  ModuloBarrett.hpp  ModuloBitHeapOperator.cpp  ModuloBitHeapOperator.hpp  ModuloMontgomery.cpp  ModuloMontgomery.hpp  OptimalCompressionStrategy.cpp  Plotter.hpp  WeightedBit.hpp
src/CORDIC/: CordicSinCosClassic.cpp  CordicSinCosClassic.hpp
src/Complex/: FullyParallelFFT.cpp  FullyParallelFFT.hpp
src/ComplexOperators/: IntComplexAdder.cpp  IntComplexAdder.hpp  IntComplexMultiplier.cpp  IntComplexMultiplier.hpp  IntFFTButterfly.cpp  (+5 more)
src/random/: CMakeLists.txt  random_main.cpp
src/random/approx_2d/: approx_2d.hpp  makefile  test_segment_approx.cpp
src/random/distributions/: chi2_partition.hpp  clt_distribution.hpp  discrete_gaussian_distribution.hpp  discrete_gaussian_distribution.wxm  distribution.hpp  gaussian_distribution.hpp  histogram_distribution.hpp  make_table_approximation.hpp  moment_conversions.hpp  quantised_gaussian_distribution.hpp  quantised_gaussian_distribution.wxm  sum_distribution.hpp  table_distribution.hpp  test_distributions.cpp
src/random/fixed_point_exp/: chained_exp_stage.hpp  close_table_exp_stage.hpp  find_close_value.hpp  fixed_point_exp_stage.hpp  fixed_point_exp_tester.hpp  func_approx_exp_stage.hpp  multiplier_exp_stage.hpp  multiplier_exp_stage_v2.hpp  multiplier_v2_exp_stage.hpp  optimise_rounding.hpp  poly_approx_exp_stage.hpp  residual_type.hpp  result_type.hpp  table_exp_stage.hpp  test_fixed_point_exp.cpp
src/random/float_approx/: FloatApprox.cpp  FloatApprox.hpp  concrete_poly.hpp  dirty_fixed_minimax.hpp  range.cpp  range.hpp  range_polys.cpp  range_polys.hpp  static_quantiser.cpp  static_quantiser.hpp  test_range.cpp
src/random/float_approx/composite/: composite_base.cpp  composite_base.hpp  composite_cos.cpp  composite_erf.cpp  composite_expm1.cpp  composite_log1p.cpp  composite_normpdf.cpp  composite_sigmoid.cpp  composite_sin.cpp
src/random/float_approx/test/: makefile
src/random/moment_correction/: correct_distribution.hpp  find_hadamard_table.cpp  find_hadamard_table_asa.cpp  gaussian_moment_correction_tables.cpp  test_moment_correction.cpp  test_moment_correction_weighted.cpp
src/random/moment_correction/systems/: cubic_system.hpp  quintic_system.hpp  symmetric_cubic_system.hpp  symmetric_heptic_system.hpp  symmetric_nonic_system.hpp  symmetric_quintic_system.hpp
src/random/poly/: fixed_format_t.cpp  fixed_format_t.hpp  fixed_point_polynomial_evaluator.cpp  fixed_point_polynomial_evaluator.hpp  full_precision_polynomial_evaluator.cpp  poly_min_max.hpp  rounding_polynomial_evaluator.cpp  test_poly_min_max.cpp
src/random/transforms/: Chi2Test.cpp  RngTransformOperator.hpp  TransformStats.cpp
src/random/transforms/blocks/: CLTCorrectedTransform.cpp  CLTTransform.cpp  CLTTransform.hpp  GRNGTableTransform.cpp  GRNGTableTransform.hpp  HadamardTransform.cpp  HadamardTransform.hpp  OutputShuffle.cpp  OutputShuffle.hpp  OutputShuffleTransform.cpp  OutputShuffleTransform.hpp  TableLookupRng.hpp  TableTransform.cpp  TableTransform.hpp  rpm_2x2_hadamard_grow.vhdl  rpm_nxn_hadamard_grow.vhdl
src/random/transforms/exp/: BitwiseExpTransform.cpp  BitwiseExpTransform.hpp
src/random/urng/: LutSrRng.hpp  decompose_period.hpp  lut_sr_rng.cpp  lut_sr_rng.hpp  mwc_rng.cpp  mwc_rng.hpp  mwc_transform.cpp  mwc_transform.hpp  test_decompose_period.cpp
src/random/utils/: anneal_asa.hpp  anneal_gsl.hpp  binomial_sampler.hpp  chain_operator.hpp  comparable_float_type.cpp  comparable_float_type.hpp  conversions.hpp  dumb_polynomial.hpp  find_roots_gsl.hpp  fixed_type.hpp  gsl_utils.hpp  ladder_accumulator.hpp  make_table.hpp  minimise_gsl.hpp  mpfr_vec.hpp  operator_factory.cpp  operator_factory.hpp  output_combiner.cpp  poly_fit.hpp  polynomial_evaluator_factory.cpp  simulate.hpp  sum.hpp  test_accumulation.cpp  test_comparable_float_type.cpp  test_optimisation.cpp
src/random/utils/fft/: convolve.hpp  convolve_integer.hpp  convolve_mpreal.hpp  fft.hpp  fft_big.hpp  fft_double.hpp  fft_mpreal.hpp  test_fft.cpp
src/random/utils/mpreal/: boost_math_mpreal.hpp  mpreal.h
tools/: vivado-runsyn.py
(+622 files in other folders)
